- Fixed bug #30779 (Compile of Zend/zend_strtod.c fails on Sparc)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@172732 c90b9560-bf6c-de11-be94-00142212c4b1